# Software-III-AI-Optimized-Earth-Injection-Deposits

./: Dockerfile  LICENSE  README.md  data.yaml
src/triangle_detector/: package.xml  setup.cfg  setup.py
src/triangle_detector/triangle_detector/: triangle_detector_node.py
triangle_detector_ws/: Dockerfile  README.md
triangle_detector_ws/src/triangle_detector/: package.xml  setup.cfg  setup.py
triangle_detector_ws/src/triangle_detector/triangle_detector/: triangle_detector_node.py
