<?xml version="1.0"?>
<package format="2">
  <name>triangle_detector</name>
  <version>0.1.0</version>
  <description>ROS 2 node for triangle detection using YOLOv8</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>